--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "author": "genijalno.ba",
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
-    "express": "~4.14.0",
+    "express": "^4.14.1",
+    "fast-csv": "^2.3.1",
     "morgan": "~1.7.0",
+    "node-crate": "^2.0.1",
+    "nodemon": "^1.11.0",
     "serve-favicon": "~2.3.0"
   }
 }
